# T2F2_TOTP_Authenticator

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
docs/: index.html
scripts/: add-sample-profiles.ps1  add-sample-profiles.sh
src/: crypto.rs  entry.rs  hid.rs  hidframe.rs  lib.rs  main.rs  proto.rs  transport.rs
src/gui/: config.rs  hotkey.rs  qr.rs
udev/: 70-t2totp.rules
